# pre-commit-lfs-size

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  RELEASE_GUIDE.md  RENOVATE_SETUP.md  check_lfs_size.py  pyproject.toml
.github/: renovate.json5
.github/workflows/: ci.yml
tests/: __init__.py  test_check_lfs_size.py
